# ai-support-ticket-classifier

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
data/: sample_tickets.csv
docs/: api_examples.md  dataset.md  docker.md  model_card.md
src/ticket_classifier/: __init__.py  batch.py  cli.py  model_service.py
src/ticket_classifier/api/: main.py  schemas.py
src/ticket_classifier/ml/: __init__.py  preprocessing.py  train.py
tests/: test_api.py  test_batch.py  test_model_service.py  test_training.py
