[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-support-ticket-classifier"
version = "0.1.0"
description = "FastAPI service that classifies support tickets with a simple machine learning pipeline."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "Yurgen Sanchez" }
]
dependencies = [
  "fastapi>=0.124.0",
  "uvicorn[standard]>=0.38.0",
  "pydantic>=2.12.0",
  "pandas>=2.2.0",
  "scikit-learn>=1.8.0",
  "joblib>=1.5.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "httpx>=0.28.0"
]

[project.scripts]
train-ticket-classifier = "ticket_classifier.ml.train:main"
predict-ticket-batch = "ticket_classifier.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
